# libperseus-sdr

./: .gitignore  95-perseus.rules  AUTHORS  BuildInstructions.md  ChangeLog  Doxyfile  Makefile.am  Makefile.in  PageName.md  ProjectHome.md  README  README.md  bootstrap.sh  cleanup.sh  config.h.in  configure  configure.ac  fifo.c  fifo.h  generate_fpga_code.sh  libperseus-sdr.pc.in  libtool  perseus-in.c  perseus-in.h  perseus-sdr.c  perseus-sdr.h  perseus250k24v21.rbs  perseus96k24v31.rbs  perseuserr.c  perseuserr.h  perseusfx2.c  perseusfx2.h  perseustest.c
.github/workflows/: ccpp.yml
build-aux/: git-version-gen
examples/: Makefile.am  fifo.c  perseustest.c  simple.c
github/: upload.sh
tags/REL-0.1/: compiletest  perseus-in.c  perseus-in.h  perseus1m24v21.rbs  perseuserr.h  perseustest.c
tags/REL-0.2/: configure  perseus-in.c  perseus-sdr.c  perseus24v11_512.c  perseus500k24v21.rbs  perseustest.c
tags/REL-0.3/: ChangeLog  Makefile.in  perseus-sdr.c  perseus125k24v21.rbs
tags/REL-0.4/: Makefile.am  configure  configure.ac  fpga_data.h  generate_fpga_code.sh  perseus-sdr.c  perseusfx2.h
tags/REL-0.5/: AUTHORS  ChangeLog  Makefile.am  cleanup.sh  compile  perseus-sdr.c  perseus2m24v21.rbs  perseuserr.h
tags/REL-0.6/: Makefile.am  README  configure.ac  perseus192k24v31.rbs  perseus95k24v31.rbs
trunk/: Makefile.am  Makefile.in  README  README.Windows  bootstrap.sh  cleanup.sh  config.h.in  configure  configure.ac  generate_fpga_code.sh  makeperseuslib  perseus-in.c  perseus-sdr.c  perseus-sdr.h  perseus1d6m24v21.rbs  perseus24v41_512.c  perseus48k24v31.rbs  perseusfx2.c  perseustest.c
trunk/lib/: libperseus-sdr.so.1.0.1
wiki/: BuildInstructions.wiki
